# malloc-similar-macos-implementation

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  main_example.c  main_multithread_example.c  malloc.h  malloc_wrapper.c
macos_similar_malloc_implementation/: free.c  malloc.c  malloc_internal.h  mem_dump.c  realloc.c  utilities.h  zone_management.c
macos_similar_malloc_implementation/tests/: free_tests.cpp  malloc_tests.cpp  realloc_tests.cpp  utilities_tests.cpp
standard_malloc_implementation/: free.c  main.c  malloc.c  malloc.h  malloc_internal.h  realloc.c  utilities.h  zone_management.c
standard_malloc_implementation/tests/: free_tests.cpp  malloc_tests.c  malloc_tests.cpp  realloc_tests.cpp  utilities_test.cpp  utilities_tests.cpp
